Fix nav bar spacing on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,14 @@ a:link{
     color:#fffdfc;
 }
 
-
+.sr-only {
+    position: absolute ;
+    left: -10000px;
+    width: 1px;
+    height: 1px;
+    top: auto;
+    overflow: hidden;
+  }
 
 a:hover{
     font-style:italic;
@@ -107,6 +114,7 @@ a:hover{
     list-style:none;
     padding:0;
     margin:0;
+    margin-right:5em;
 }
 
 .mobile-nav-toggle{
@@ -126,7 +134,20 @@ a:visited{
     max-height:50px;
     float:left;
     padding: 10px;
+    margin-left:5rem;
 }
+
+@media screen and (min-width:800px) and (max-width:1200px){
+    #logo{
+        margin-left:2rem;
+    }
+
+    .primary-navigation{
+        font-size:14px;
+        margin-right:2rem;
+    }
+}
+
 @media screen and (max-width:800px){
     .primary-navigation{
         --gap:2em;
@@ -136,9 +157,9 @@ a:visited{
         z-index:1000;
         flex-direction:column;
         padding: min(20vh, 10rem) 2rem;
-        
         transform: translateX(100%);
         transition: transform 350ms ease-out;
+        margin:0;
     }
 
     .primary-navigation[data-visible="true"]{
